--- a/Headphones.html
+++ b/Headphones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaming Headsets, Wireless Headphones, Earphones | Logitech G</title>
+    <title>Logitech G | Advanced Gaming Experiences for All</title>
     <link rel="stylesheet" href="css/headphones.css">
     <link rel="shortcut icon" href="ico/logitech_logo_icon_181377.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -12,38 +12,56 @@
     <link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@200;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="dd">
+    <div id="ddF">
     </div>
-    <header class="d-flex justify-content-center py-3">
-        <ul class="nav nav-pills">
-            <li class="nav-item">
-                <a href="index.html" class="nav-link">Shop</a>
-            </li>
-            <li class="nav-item">
-                <a href="Headphones.html" class="nav-link active" aria-current="page">Headphones</a>
-            </li>
-            <li class="nav-item">
-                <a href="Mice.html" class="nav-link">Mice</a>
-            </li>
-            <li class="nav-item">
-                <a href="Microphones.html" class="nav-link">Microphones</a>
-            </li>
-        </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="Headphones.html">Наушники</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Mice.html">Мыши</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Microphones.html">Микрофоны</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <div id="ddd">
             <br>
-            <h2 class="txtt">Company Logitech</h2>
-            <div id="dd2">
+            <h2 class="txtt">Headphones</h2>
+            <div class="rodkart">
+                <div>
+                    <img class="karta"src="https://resource.logitechg.com/w_692,c_lpad,ar_4:3,q_auto,f_auto,dpr_1.0/d_transparent.gif/content/dam/gaming/en/products/pro-x-2-lightspeed/gallery/gallery-1-pro-x-2-lightspeed-gaming-headset-black.png?v=1">
+                </div>
+                <div>
+                    <img class="karta1" src="https://resource.logitechg.com/w_386,ar_1.0,c_limit,f_auto,q_auto,dpr_2.0/d_transparent.gif/content/dam/gaming/en/products/shroud/shroud-prox-gallery-1.png?v=1">
+                </div>
+                <div>
+                    <img class="karta2" src="https://resource.logitechg.com/w_386,ar_1.0,c_limit,f_auto,q_auto,dpr_2.0/d_transparent.gif/content/dam/gaming/en/products/fits/gallery/gallery-1-white.png?v=1">
+                </div>
             </div>
-            <h2 class="txtt">HEADPHONES</h2>
-            <div class="klac">
-                <img class="karta" src="https://resource.logitechg.com/w_692,c_lpad,ar_4:3,q_auto,f_auto,dpr_1.0/d_transparent.gif/content/dam/gaming/en/products/pro-x-2-lightspeed/gallery/gallery-1-pro-x-2-lightspeed-gaming-headset-black.png?v=1">
-                <img class="karta" src="https://resource.logitechg.com/w_386,ar_1.0,c_limit,f_auto,q_auto,dpr_2.0/d_transparent.gif/content/dam/gaming/en/products/shroud/shroud-prox-gallery-1.png?v=1">
-                <img class="karta" src="https://resource.logitechg.com/w_386,ar_1.0,c_limit,f_auto,q_auto,dpr_2.0/d_transparent.gif/content/dam/gaming/en/products/fits/gallery/gallery-1-white.png?v=1">
-            </div>
-        </div><br><br>
+        </div>
     </main>
+    <footer>
+        <h2 class="ggf">Contacts</h2>
+        <div class="fut">
+            <div class="ggf2">+77776454354</div>
+            <div class="ggf3">logitech222@mail.ru</div>
+            <div class="ggf4">Astana 28/1</div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
