--- a/index.html
+++ b/index.html
@@ -12,35 +12,45 @@
     <link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@200;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="dd">
+    <div id="ddF">
     </div>
-    <header class="d-flex justify-content-center py-3">
-        <ul class="nav nav-pills">
-            <li class="nav-item">
-                <a href="index.html" class="nav-link active" aria-current="page">Shop</a>
-            </li>
-            <li class="nav-item">
-                <a href="Headphones.html" class="nav-link">Headphones</a>
-            </li>
-            <li class="nav-item">
-                <a href="Mice.html" class="nav-link">Mice</a>
-            </li>
-            <li class="nav-item">
-                <a href="Microphones.html" class="nav-link">Microphones</a>
-            </li>
-        </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">Главная</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="Mice.html">Мыши</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Microphones.html">Микрофоны</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Headphones.html">Наушники</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <div id="ddd">
             <br>
             <h2 class="txtt">Company Logitech</h2>
-            <div id="dd2">
-            </div>
-            <div class="txttt">
-                Introducing the Logitech MX Keys S Combo —A high-<br>
-                performance keyboard and an iconic wireless mouse<br>
-                engineered to get you in your flow for hours of comfortable<br>
-                productivity.
+            <div class="rod1">
+              <div class="txttt">
+                  Introducing the Logitech MX Keys S Combo —A high-
+                  performance keyboard and an iconic wireless mouse
+                  engineered to get you in your flow for hours of comfortable
+                  productivity.
+              </div>
+              <div>
+                <img class="kartinFa" src="css/Logitech-PNG-Clipart.png" width="350px" height="250px">
+              </div>
             </div>
             <div class="diver1">
                 <h1 class="divertxt">SHOP MX KEYS S COMBO</h1>
@@ -48,7 +58,7 @@
             <div class="diver2">
                 <h1 class="divertxt">LEARN MORE</h1>
             </div>
-            <img class="kartina" src="css/Logitech-PNG-Clipart.png">
+            
         </div>
     </main>
     <footer>
@@ -56,7 +66,7 @@
         <div class="fut">
             <div class="ggf2">+77776454354</div>
             <div class="ggf3">logitech222@mail.ru</div>
-            <div class="ggf4">Astana 28/1</div><br>
+            <div class="ggf4">Astana 28/1</div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
